logs/spyral.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Parsley-1.3.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/ometa'...
Listing './lib/python3.5/site-packages/ometa/_generated'...
Listing './lib/python3.5/site-packages/ometa/test'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spyral'...
Compiling './lib/python3.5/site-packages/spyral/director.py'...
***   File "./lib/python3.5/site-packages/spyral/director.py", line 48
    print 'Warning: Tried to initialize the director twice. Ignoring.'
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spyral/resources'...
Listing './lib/python3.5/site-packages/spyral/resources/fonts'...
Listing './lib/python3.5/site-packages/spyral/resources/images'...
Compiling './lib/python3.5/site-packages/spyral/scene.py'...
***   File "./lib/python3.5/site-packages/spyral/scene.py", line 223
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spyral/vector.py'...
***   File "./lib/python3.5/site-packages/spyral/vector.py", line 95
    print self, o
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spyral-0.9.6.egg-info'...
Listing './lib/python3.5/site-packages/terml'...
Listing './lib/python3.5/site-packages/terml/_generated'...
Listing './lib/python3.5/site-packages/terml/test'...
Listing './share'...
Listing './share/python-wheels'...
